# Patternoid

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_all_tests.sh  run_test_executable.sh
src/: CMakeLists.txt  contour_map.cpp  contour_map.hpp  cv_utils.cpp  cv_utils.hpp  file_utils.cpp  file_utils.hpp  main.cpp
src/scores/: contour_quality.cpp  contour_quality.hpp
tests/: CMakeLists.txt  contour_extraction_tests.cpp  cv_test.cpp
tests/test_utils/: test_images.cpp  test_images.hpp
